syntax = "proto3";

package followService;

option go_package = "./proto;followService";

service FollowService {
	rpc IsFollowing(UserTargetReq) returns (BoolRsp) {}
	rpc GetFollowerCnt(UserIdReq) returns (CountRsp) {}
	rpc GetFollowingCnt(UserIdReq) returns (CountRsp) {}
	rpc AddFollowRelation(UserTargetReq) returns (BoolRsp) {}
	rpc DeleteFollowRelation(UserTargetReq) returns (BoolRsp) {}
	rpc GetFollowing(UserIdReq) returns (UserListRsp) {}
	rpc GetFollowers(UserIdReq) returns (UserListRsp) {}

}

message UserTargetReq{
	int64 userId = 1;
	int64 targetId = 2;
}

message BoolRsp{
	bool flag = 1;
}

message UserIdReq{
	int64 userId = 1;
}

message CountRsp{
	int64  count = 1;
}

message FeedUser{
	int64 id = 1;
	string name = 2;
	int64 followCount = 3;
	int64 followerCount = 4;
	bool isFollow	= 5;
	int64 totalFavorited = 6;
	int64 favoriteCount = 7;
}

message UserListRsp{
	repeated FeedUser user = 1;
}


